--- a/app/views/shared/_consultation_show.html.erb
+++ b/app/views/shared/_consultation_show.html.erb
@@ -19,7 +19,7 @@
     <% if doctor_signed_in? %>
       <div class="justiy-content-end mr-3">
         <%= link_to edit_doctor_consultation_path(@consultation) do %>
-          <button class="btn btn-primary" style="background-color: #ff8800; border: none;">Edit consultation <i class="fas fa-edit col-2"></i></button>
+          <button class="btn btn-primary" style="background-color: #ff8800; border: none;">Edit report <i class="fas fa-edit col-2"></i></button>
         <% end %>
       </div>
     <% end %>
