--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,6 @@
 // Define variables for your color scheme
 
-// For example:
+// For google_api:
 $light-salmon: #eddbd8;
 $light-orange: #F4CDA6;
 $dark-blue: #395579;
